derive/tests/snapshots/wrapper_created_named/Invoice/get_all_invoices.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `invoice` table.
    pub fn get_all_invoices<'a>(&'a self) -> impl Iterator<Item = Invoice> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().invoice().iter()
    }
}
